# taskhub

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
.junie/: guidelines.md
alembic/: env.py
alembic/versions/: a3f1d2e8c9b0_add_project_member_and_comment.py  ab1a7039e306_create_notification_table.py  ab6ac623faee_add_notification_preferences_to_user.py  b04dba377f8b_create_project_table.py  b47ab726b3c1_add_project_and_issue_models.py  dc1d99682115_refactor_created_at_and_updated_at_to_.py  e987cbb689ec_create_projects.py  ee542e6c378d_add_auth_tables.py  f2c4d8a1b7e3_add_notification_payload_jsonb.py
api/: main.py
api/auth/: dependencies.py  jwt.py  models.py  password.py  views.py
api/core/: config.py  database.py  logging.py
api/projects/: models.py  routes.py  schemas.py
app/: __init__.py  main.py
app/api/: main.py
app/api/auth/: api_messages.py  dependencies.py  deps.py  jwt.py  models.py  password.py  responses.py  routes.py  schemas.py  views.py
app/api/comments/: models.py  routes.py  schemas.py
app/api/core/: config.py  database.py  logging.py
app/api/issues/: __init__.py  models.py  routes.py  schemas.py  services.py
app/api/notifications/: deps.py  models.py  routes.py  schemas.py  services.py
app/api/projects/: models.py  routes.py  schemas.py
app/core/: config.py  database.py  event_bus.py  logging.py  middleware.py
app/identity/: __init__.py
app/identity/application/: ports.py  use_cases.py
app/identity/domain/: __init__.py  entities.py  events.py  exceptions.py  repositories.py  value_objects.py
app/identity/infrastructure/: __init__.py  adapters.py  deps.py  jwt.py  models.py  password.py  repositories.py  routes.py  schemas.py
app/issue_tracking/: __init__.py
app/issue_tracking/application/: __init__.py  issue_use_cases.py  project_use_cases.py  services.py
app/issue_tracking/domain/: __init__.py  entities.py  events.py  exceptions.py  (+2 more)
pycharm_http_requests/: README.md  auth.http  issues.http  main.http  projects.http
scripts/: test_websocket_notifications.py
tests/: conftest.py  test_auth.py  test_comments.py  test_connection_manager.py  test_issues.py  test_main.py  test_notification_services.py  test_notifications.py  test_projects.py  test_websocket.py
(+45 files in other folders)
